# strawberry-fancy-auth

./: README.md  pyproject.toml
fancy_auth/: __init__.py  all_roles.py  base_role.py  context.py  decorator.py  directives.py  field_extension.py  get_input_arg.py  policy.py
fancy_auth/roles/: UserIsDog.py  UserMatches.py  __init__.py
tests/: and_or_logic_test.py  async_resolver_test.py  bad_usage_test.py  basic_field_test.py  basic_type_test.py  directives_applied_test.py  field_input_arg_test.py  mutation_input_test.py  roles_are_valid_test.py  scopes_test.py
tests/roles/: UserIsDog_test.py  UserMatches_test.py
